# betfairBot

./: .env.example  .gitignore  Dockerfile  INFRA.md  README.md  alembic.ini  betfair-ltd-bot-milestones.md  deepseek.bat  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  review.bat  spec.md
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
config/: settings.yaml
grafana/dashboards/: betfair_ltd.json
grafana/provisioning/dashboards/: provider.yaml
grafana/provisioning/datasources/: postgres.yaml
scripts/: db_check.py  start.sh
src/: __init__.py  exceptions.py  logging_config.py  main.py
src/auth/: __init__.py  betfair_auth.py
src/backtest/: __init__.py  cli.py  db_loader.py  loader.py  replay.py  report.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  models.py  repository.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial_schema.py  0002_orders_trades.py  0003_ticks_market_index.py
src/goal_detection/: __init__.py  detector.py
src/risk/: __init__.py  risk_manager.py  stop_loss.py
src/strategy/: __init__.py  ltd_strategy.py
src/streaming/: __init__.py  market_stream.py
tests/: conftest.py
tests/integration/: test_repository.py
tests/unit/: test_auth.py  test_backtest_db_loader.py  test_backtest_loader.py  test_backtest_replay.py  test_backtest_report.py  test_config.py  test_goal_detector.py  test_logging.py  test_ltd_strategy.py  test_main.py  test_risk_manager.py  test_stop_loss.py  test_streaming.py
